src/test/ui/closures/closure-reform-bad.stderr
error[E0308]: mismatched types
  --> $DIR/closure-reform-bad.rs:8:15
   |
LL |     let f = |s: &str| println!("{}{}", s, string);
   |             ------------------------------------- the found closure
LL |     call_bare(f)
   |               ^ expected fn pointer, found closure
   |
   = note: expected fn pointer `for<'r> fn(&'r str)`
                 found closure `[closure@$DIR/closure-reform-bad.rs:7:13: 7:50]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
